# dax-cli

./: .gitignore  AGENTS.md  CONTRIBUTING.md  IMPLEMENTATION.md  LICENSE  MIGRATION.md  Makefile  PRACTICAL_FEATURES.md  README.md  SECURITY.md  WHATS_NEW.md  dax  drizzle.config.ts  ecosystem.config.cjs  install  package-lock.json  package.json  start.sh  tsconfig.json  vite.config.ts  wrangler.jsonc
.cognito/: contract.yaml
.dax/: history.txt  provider-scorecard.json
.dax/migrations/: env_v1_warned
bridges/subscription-bridge/: README.md  nginx.conf.example  server.ts
crates/dax-tui/: Cargo.toml
crates/dax-tui/src/: main.rs
docs/: phase-4.1-checklist.md  phase-4.md  rao-modes.md
public/static/: style.css
src/: FeatureCard.tsx  InteractiveWorkspace.tsx  PrincipleCard.tsx  auth.ts  config.ts  data.ts  features.ts  index.tsx  migrate.ts  principles.ts  rate-limit.ts  seed.ts  server.ts  types.ts  verify-subscriptions.ts
src/agent/: chatgpt.ts  claude-cli.ts  codex.ts  core.rao.persist.test.ts  core.rao.simulate.readonly.test.ts  core.rao.test.ts  core.stream-chat-timeout.test.ts  core.stream-fallback.test.ts  core.stream-planning-timeout.test.ts  core.ts  gemini-cli.ts  gemini.ts  manager.ts  prompts.test.ts  prompts.ts  server.ts
src/auth/: gemini.ts
src/cli/: control.ts  fallback.test.ts  fallback.ts  main.ts  migrations.ts  phaseController.test.ts  phaseController.ts  policy.test.ts  policy.ts  renderThinking.test.ts  renderThinking.ts  stream-renderer.ts  telemetry.ts  telemetryBus.test.ts  telemetryBus.ts  thinkingPolicy.ts  uiState.ts
(+42 files in other folders)
