[package]
name = "dax-tui"
version = "0.1.0"
edition = "2021"
description = "DAX Ratatui TUI backend"

[[bin]]
name = "dax-tui"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync", "rt"] }
log = "0.4"
env_logger = "0.11"
atty = "0.2"

[profile.release]
opt-level = 3
lto = true
